# scoringbasket

./: pyproject.toml
backend/: database.py  main.py  middlewares.py  models.py  routes.py  routes_games.py  routes_matches.py  routes_websocket.py  schemas.py  schemas_games.py  services.py  services_matches.py  services_realtime.py
backend/app/: routes_auth.py  schemas_auth.py  security.py  services_auth.py  services_games.py  websocket.py
